# surreal-dbops

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  release.config.js
.github/: ct.yaml
.github/workflows/: ci.yaml  release.yaml  version.yaml
charts/surreal-dbops/: Chart.yaml  values.yaml
charts/surreal-dbops/crds/: Database.yaml  Instance.yaml  Namespace.yaml  Rollout.yaml  Schema.yaml
charts/surreal-dbops/templates/: _helpers.tpl  crds.yaml  deployment.yaml  rbac.yaml  service.yaml  webhook.yaml
scripts/: test-e2e.sh
src/: lib.rs  main.rs
src/controller/: database.rs  instance.rs  mod.rs  namespace.rs  rollout.rs  schema.rs  utils.rs
src/crd/: database.rs  instance.rs  mod.rs  namespace.rs  rollout.rs  schema.rs
src/surreal/: client.rs  diff.rs  mod.rs
src/webhook/: mod.rs  server.rs
tests/: controller_helper_test.rs  controller_test.rs  diff_test.rs  integration_test.rs
tests/chainsaw/operator-lifecycle/: chainsaw-test.yaml
