[package]
name = "surreal-dbops"
version = "0.1.0"
edition = "2021"
description = "Kubernetes custom controller to manage SurrealDB logical resources using GitOps principles"

[dependencies]
# Kubernetes client and controller runtime
kube = { version = "0.87.2", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
schemars = "0.8.16"

# Async runtime and streams
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"

# Database client
surrealdb = { version = "1.3.0", default-features = false, features = ["protocol-http", "protocol-ws"] }

# Error handling and logging
anyhow = "1.0.81"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sha2 = "0.10.8"
chrono = { version = "0.4.35", features = ["serde"] }

# Webhook server & TLS
axum = { version = "0.7.4", features = ["macros"] }
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
rcgen = "0.12.1"
tls-listener = { version = "0.10.0", features = ["rustls"] }
tokio-rustls = { version = "0.25.0", features = ["ring"] }
rustls-pemfile = "2.1.1"
base64 = "0.22.0"

[profile.dev]
debug = 0

[profile.release]
debug = 0
opt-level = 1
codegen-units = 1
lto = false

[features]
default = ["kv-mem"]
kv-mem = ["surrealdb/kv-mem"]
